--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -103,3 +103,12 @@ button:focus:not(:focus-visible) {
 }
 
 
+@media screen and (max-width: 768px) {
+	picture {
+		max-width: 400px;
+	}
+}
+
+caption {
+	width: 100%;
+}
